--- a/src/components/PaymentButton/Button.css
+++ b/src/components/PaymentButton/Button.css
@@ -8,7 +8,7 @@ button {
     color: #f9f9f9;
     background: #2932d1;
     border: 0;
-    border-radius: 6px;
+    border-radius: 50px;
     padding: 0;
     width: 260px;
     height: 70px;
@@ -16,6 +16,11 @@ button {
     font-family: "Euclid Circular A";
     cursor: pointer;
     transition: 0.3s;
+}
+
+.radin {
+    border: 0;
+    border-radius: 15px;
 }
 
 .rail {
